# radiation-sensor-placement-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
simulator/: __init__.py  batch.py  core.py
simulator/sampling/: __init__.py  designs.py
simulator/tests/: test_batch.py  test_core.py  test_sampling.py
