[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digilab_hotspot_detector_sim"
version = "0.1.0"
description = "digiLab hotspot detector simulator + Streamlit app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "streamlit>=1.32",
]

[tool.setuptools]
packages = ["simulator", "simulator.sampling", "simulator.tests"]
