[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digilab_hotspot_detector_sim"
version = "0.1.0"
description = "digiLab hotspot detector simulator + Streamlit app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "altair>=5.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.24",
  "scipy>=1.10",
  "streamlit>=1.32",
]

[tool.poetry]
package-mode = false
packages = [
  { include = "simulator" },
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[tool.setuptools]
packages = ["simulator", "simulator.sampling", "simulator.tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
